--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,14 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- deployment.yaml
-- service.yaml
-- route.yaml
+  - ./k8sConfig/deployment.yaml
+  - ./k8sConfig/service.yaml
+  - ./k8sConfig/route.yaml
+  - ./k8sConfig/role-deployer.yaml
 commonLabels:
   app: fabianschwab-express-sample-app
   app.kubernetes.io/instance: fabianschwab-express-sample-app-instance
   app.kubernetes.io/name: fabianschwab-express-sample-app
-images:
-- name: quay.io/fabianschwab/express-sample-app
-  newName: quay.io/fabianschwab/express-sample-app
-  newTag: d90c742ee626048c4d1e2032eb836255e4036561
